# setu-rp

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  NOTES.md  README.md  config.yaml  pyproject.toml  requirements.txt
scripts/: analyze.sh  collect.sh  report.sh
src/setu_rp/: cli.py  config.py
src/setu_rp/analysis/: analyzer.py  bot_detection.py  contributors.py  governance.py  metrics_rq1.py  metrics_rq2.py  schema.py  sentiment.py  statistics.py  time_windows.py
src/setu_rp/collection/: client.py  collector.py  comments.py  governance.py  labels.py  pull_requests.py  reviews.py  users.py
src/setu_rp/db/: connection.py  models.py  schema.py
src/setu_rp/reporting/: charts.py  dashboard.py  live_analysis.py  static_report.py
src/setu_rp/reporting/pages/: data_export.py  overview.py  rq1_efficiency.py  rq1_retention.py  rq2_behavior.py  rq2_governance.py  rq2_sentiment.py  sensitivity.py
tekton/: pipeline.yaml  pipelinerun.yaml
tekton/tasks/: analyze.yaml  collect.yaml  report.yaml
tests/: conftest.py  test_analysis.py  test_client.py  test_collector.py  test_governance.py  test_schema.py  test_sentiment.py
tests/fixtures/: issue_comment.json  pull_request.json  review.json  review_comment.json
